--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.dewerro.measurer">
 
+    <!-- Both "AR Optional" and "AR Required" apps require CAMERA permission. -->
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <!-- Sceneform requires OpenGL ES 3.0 or later. -->
+    <uses-feature android:glEsVersion="0x00030000" android:required="true" />
+
+    <!-- Indicates that app requires ARCore ("AR Required"). Ensures the app is
+         visible only in the Google Play Store on devices that support ARCore.
+         For "AR Optional" apps remove this line. -->
+    <uses-feature android:name="android.hardware.camera.ar" />
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +25,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Measurer"
         tools:targetApi="31">
+
+        <!-- Indicates that app requires ARCore ("AR Required"). Causes the Google
+             Play Store to download and install Google Play Services for AR along
+             with the app. For an "AR Optional" app, specify "optional" instead of
+             "required".
+        -->
+        <meta-data android:name="com.google.ar.core" android:value="required" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
