--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         -->
         <meta-data android:name="com.google.ar.core" android:value="required" />
         <activity
-            android:name=".MainActivity"
+            android:name=".fragments.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Measurer">
             <intent-filter>
