--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,24 +37,24 @@ android {
 
 dependencies {
     // Default dependencies
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.5.0-alpha04'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation "androidx.core:core-ktx:$androidx_core_version"
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    implementation "com.google.android.material:material:$material_version"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_fragment_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation_ui_version"
+    testImplementation "junit:junit:$junit_version"
+    androidTestImplementation "androidx.test.ext:junit:$android_junit_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_core_version"
 
     // Firebase Auth
-    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
+    implementation "com.google.firebase:firebase-auth-ktx:$firebase_auth_version"
 
     // Firebase Firestore
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.4.1'
+    implementation "com.google.firebase:firebase-firestore-ktx:$firebase_firestore_version"
     
     // AR Core
-    implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.17.1'
-    implementation 'com.google.ar.sceneform:core:1.17.1'
-    implementation 'com.google.ar:core:1.34.0'
+    implementation "com.google.ar.sceneform.ux:sceneform-ux:$ar_sceneform_ux_version"
+    implementation "com.google.ar.sceneform:core:$ar_sceneform_core_version"
+    implementation "com.google.ar:core:$ar_core_version"
 }
