--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,23 @@
 buildscript {
+    ext {
+        androidx_core_version = '1.9.0'
+        appcompat_version = '1.5.1'
+        material_version = '1.7.0'
+        constraintlayout_version = '2.1.4'
+        navigation_fragment_version = '2.5.3'
+        navigation_ui_version = '2.5.3'
+        junit_version = '4.13.2'
+        android_junit_version = '1.1.4'
+        espresso_core_version = '3.5.0'
+        firebase_auth_version = '21.1.0'
+        firebase_firestore_version = '24.4.1'
+        ar_sceneform_ux_version = '1.17.1'
+        ar_sceneform_core_version = '1.17.1'
+        ar_core_version = '1.34.0'
+        google_services_version = '4.3.14'
+    }
     dependencies {
-        classpath 'com.google.gms:google-services:4.3.14'
+        classpath "com.google.gms:google-services:$google_services_version"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
