--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
         androidx_core_version = '1.9.0'
@@ -19,7 +20,7 @@ buildscript {
     dependencies {
         classpath "com.google.gms:google-services:$google_services_version"
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+}
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
