--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
     <!-- Sceneform requires OpenGL ES 3.0 or later. -->
-    <uses-feature android:glEsVersion="0x00030000" android:required="true" />
+    <uses-feature
+        android:glEsVersion="0x00030000"
+        android:required="true" />
 
     <!-- Indicates that app requires ARCore ("AR Required"). Ensures the app is
          visible only in the Google Play Store on devices that support ARCore.
@@ -33,7 +35,9 @@
              with the app. For an "AR Optional" app, specify "optional" instead of
              "required".
         -->
-        <meta-data android:name="com.google.ar.core" android:value="required" />
+        <meta-data
+            android:name="com.google.ar.core"
+            android:value="required" />
         <activity
             android:name=".fragments.MainActivity"
             android:exported="true"
