--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,8 @@ plugins {
 android {
     compileSdk 33
 
+    namespace = "com.dewerro.measurer"
+
     defaultConfig {
         applicationId "com.dewerro.measurer"
         minSdk 24
