--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
             android:name="com.google.ar.core"
             android:value="required" />
         <activity
-            android:name=".fragments.MainActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Measurer">
             <intent-filter>
