--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 activityCompose = "1.10.1"
 composeBom = "2025.06.00"
+hiltAndroid = "2.56.2"
 kotlin = "2.1.20"
 androidGradlePlugin = "8.10.0"
 googleServicesPlugin = "4.4.2"
@@ -17,6 +18,8 @@ material = "1.12.0"
 navigationCompose = "2.9.0"
 navigationFragmentKtx = "2.9.0"
 sceneform = "1.17.1"
+daggerHilt = "2.56.2"
+ksp = "2.1.20-2.0.1"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
@@ -39,6 +42,8 @@ ar-core = { module = "com.google.ar:core", version.ref = "coreVersion" }
 firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 firebase-firestore-ktx = { module = "com.google.firebase:firebase-firestore-ktx" }
+hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
+hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroid" }
 junit = { module = "junit:junit", version.ref = "junit" }
 material = { module = "com.google.android.material:material", version.ref = "material" }
 sceneform-ux = { module = "com.google.ar.sceneform.ux:sceneform-ux", version.ref = "sceneform" }
@@ -46,6 +51,8 @@ sceneform-core = { module = "com.google.ar.sceneform:core", version.ref = "scene
 
 
 [plugins]
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "daggerHilt" }
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
 android-library = { id = "com.android.library", version.ref = "androidGradlePlugin" }
 google-services = { id = "com.google.gms.google-services", version.ref = "googleServicesPlugin" }
